Fix spacing and update portfolio image

--- a/app/components/Current/Current.module.scss
+++ b/app/components/Current/Current.module.scss
@@ -31,7 +31,7 @@
 @media only screen and (max-width: 800px) {
   .wrapper {
     height: 100%;
-    padding: 60px 45px 20px 45px;
+    padding: 60px 20px 20px 20px;
   }
   .container {
     flex-direction: column;
