--- a/app/components/Work/Work.module.scss
+++ b/app/components/Work/Work.module.scss
@@ -23,7 +23,7 @@
 
 @media only screen and (max-width: 800px) {
   .wrapper {
-    padding: 30px 45px 100px 35px;
+    padding: 30px 20px 100px 20px;
   }
   .container {
     flex-direction: column;
