--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
 }
 
 h1{
-  font-size: 9em !important;
+  font-size: 8em !important;
   font-family:var(--font-body);
   font-weight: 700;
   line-height: 115%;
